<resources>
    <string name="app_name">Birthday_v2</string>
    <string name="prev_month">Prev</string>
    <string name="next_month">Next</string>
    <string name="month">month</string>
    <string name="all_person">All Person</string>
    <string name="go_person">Person</string>
    <string name="go_event">Event</string>
    <string name="cancel">Cancel</string>
    <string name="del">Del</string>
    <string name="ok">OK</string>
    <string name="go_add_event">AddEvent</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="del_confirm">Вы хотите удалить?</string>
    <string name="surname">Surname</string>
    <string name="name">name</string>
    <string name="patronymic">patronymic</string>
    <string name="phone">phone</string>
    <string name="date">Data</string>
    <string name="event">Event</string>
    <string name="db_table_event">event</string>
    <string name="db_table_person">person</string>
    <string name="add_person">+</string>
    <string name="date_picker">Select Data</string>
</resources>