<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00B2C0"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_prev_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00e4e5"
                android:text="@string/prev_month">

            </Button>

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="#00e4e5"
                android:padding="10dp"
                android:text="@string/month" />

            <Button
                android:id="@+id/btn_next_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00e4e5"
                android:text="@string/next_month" />

        </LinearLayout>

        <ListView
            android:id="@+id/lv_date_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/go_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_person">

        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>